<resources>
    <string name="app_name">LibraryClientAndroid</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_button_text">登录</string>
    <string name="regist_button_text">注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="regist_username">用户名</string>
    <string name="reck_password">确认密码</string>
    <string name="msgsend_button_text">发送</string>

    <string name="main_activity_label">预约助手</string>
    <string name="inform_toolbar_label">意见反馈</string>

    <string name="order_toolbar_roomchoose">阅览室选择</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">刷新</string>

    <string name="title_activity_smile_plz">SmilePlzActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="main_statement">系统声明\n
        点击蓝色相机按钮即可扫码签到\n
        侧栏还有更多功能\n
        此应用在android5.0上开发，在7.0上会有一些兼容问题\n
        另外，在7.0上需要手动赋予摄像头权限\n
        vincentstchu 2018.1.16
    </string>

</resources>
